# Rubik-s-Cube-ITMO-programming-

./: CMakeLists.txt  README.md  cube.h  cube_realization.cpp  file.txt  main.cpp  rotations.cpp  solver  visual_cube.cpp
